data/Java/18-missing-return-value/4/[M]Error.txt
https://stackoverflow.com/questions/12879368/missing-return-statement
Job.java:16: error: incompatible types: missing return value
        return;
        ^